--- a/docs/AnoPrimer-docs/notebooks/notebooks.ipynb
+++ b/docs/AnoPrimer-docs/notebooks/notebooks.ipynb
@@ -8,16 +8,16 @@
    "source": [
     "# Notebooks\n",
     "\n",
-    "As well as a standalone python package, AgamPrimer is organised into two jupyter notebooks, intended to be run in google colab:\n",
+    "As well as a standalone python package, AnoPrimer is organised into two jupyter notebooks, intended to be run in google colab:\n",
     "\n",
     "<br>\n",
     "</br>\n",
     "\n",
     "<div align=\"center\">\n",
     "\n",
-    "[![Custom badge](https://img.shields.io/endpoint?color=white&logo=Google%20Colab&url=https%3A%2F%2Fraw.githubusercontent.com%2Fsanjaynagi%2FAgamPrimer%2Fmain%2Fgraphics%2Fbadge.json)](https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/notebooks/AgamPrimer-long.ipynb)\n",
+    "[![Custom badge](https://img.shields.io/endpoint?color=white&logo=Google%20Colab&url=https%3A%2F%2Fraw.githubusercontent.com%2Fsanjaynagi%2FAnoPrimer%2Fmain%2Fgraphics%2Fbadge.json)](https://colab.research.google.com/github/sanjaynagi/AnoPrimer/blob/main/notebooks/AnoPrimer-long.ipynb)\n",
     "\n",
-    "[![Custom badge](https://img.shields.io/endpoint?color=red&logo=Google%20Colab&url=https%3A%2F%2Fraw.githubusercontent.com%2Fsanjaynagi%2FAgamPrimer%2Fmain%2Fgraphics%2Fbadge-short.json)](https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/notebooks/AgamPrimer-short.ipynb)\n",
+    "[![Custom badge](https://img.shields.io/endpoint?color=red&logo=Google%20Colab&url=https%3A%2F%2Fraw.githubusercontent.com%2Fsanjaynagi%2FAnoPrimer%2Fmain%2Fgraphics%2Fbadge-short.json)](https://colab.research.google.com/github/sanjaynagi/AnoPrimer/blob/main/notebooks/AnoPrimer-short.ipynb)\n",
     "\n",
     "</div>\n"
    ]
