--- a/notebooks/AnoPrimer-short.ipynb
+++ b/notebooks/AnoPrimer-short.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# First, install some packages we require\n",
-    "!pip install AgamPrimer -q "
+    "!pip install AnoPrimer -q "
    ]
   },
   {
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "import AgamPrimer\n",
+    "import AnoPrimer\n",
     "import pandas as pd"
    ]
   },
@@ -40,11 +40,11 @@
     "id": "aygnIeKqQbUR"
    },
    "source": [
-    "##**[AgamPrimer](https://github.com/sanjaynagi/AnoPrimer): Primer design considering genetic variation in *Anopheles gambiae* and *Anopheles funestus***\n",
+    "##**[AnoPrimer](https://github.com/sanjaynagi/AnoPrimer): Primer design considering genetic variation in *Anopheles gambiae* and *Anopheles funestus***\n",
     "**Author**: [Sanjay Curtis Nagi](https://sanjaynagi.github.io/)    \n",
     "**Email**: sanjay.nagi@lstmed.ac.uk  \n",
     "\n",
-    "This notebook allows users to run AgamPrimer, without running the full, extended colaboratory [notebook](https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/notebooks/AgamPrimer-long.ipynb)."
+    "This notebook allows users to run AnoPrimer, without running the full, extended colaboratory [notebook](https://colab.research.google.com/github/sanjaynagi/AnoPrimer/blob/main/notebooks/AnoPrimer-long.ipynb)."
    ]
   },
   {
@@ -94,7 +94,7 @@
    },
    "outputs": [],
    "source": [
-    "primer_df, blat_df = AgamPrimer.designPrimers(\n",
+    "primer_df, blat_df = AnoPrimer.designPrimers(\n",
     "                                species='funestus',\n",
     "                                assay_type='gDNA primers + probe',  # assay_type options are: 'cDNA primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
     "                                target='2RL:22422652',                               #'AGAP000818-RA' target should be an AGAP/AFUN transcript identifier for qPCR, otherwise should be a contig:integer string in genome, such as '2L:28545767'\n",
