--- a/notebooks/workshop-6-module-4-AgamPrimer.ipynb
+++ b/notebooks/workshop-6-module-4-AgamPrimer.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sanjaynagi/AgamPrimer/blob/main/notebooks/workshop-6-module-4-AgamPrimer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sanjaynagi/AnoPrimer/blob/main/notebooks/workshop-6-module-4-AnoPrimer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -31,11 +31,11 @@
         "id": "95841879"
       },
       "source": [
-        "# Module 4 - AgamPrimer - Primer Design in *Anopheles gambiae*\n",
+        "# Module 4 - AnoPrimer - Primer Design in *Anopheles gambiae*\n",
         "\n",
         "**Theme: Tools & technology**\n",
         "\n",
-        "In the previous modules of workshop 6, we learnt how to discover candidate loci for insecticide resistance, using genome-wide selection scans (GWSS). In this module, we introduce a new python package [AgamPrimer](https://github.com/sanjaynagi/AgamPrimer), which uses the [malariagen_data API](https://malariagen.github.io/vector-data/ag3/api.html) and [primer3-py](https://github.com/libnano/primer3-py), to allow us to design primers and probes in *Anopheles gambiae s.l*. We can use then use these primers and probes to help us validate putative resistance loci. By integrating the malariagen_data API, AgamPrimer allows us to consider and avoid genetic variation in the Ag1000g resource during the design of our primers."
+        "In the previous modules of workshop 6, we learnt how to discover candidate loci for insecticide resistance, using genome-wide selection scans (GWSS). In this module, we introduce a new python package [AnoPrimer](https://github.com/sanjaynagi/AnoPrimer), which uses the [malariagen_data API](https://malariagen.github.io/vector-data/ag3/api.html) and [primer3-py](https://github.com/libnano/primer3-py), to allow us to design primers and probes in *Anopheles gambiae s.l*. We can use then use these primers and probes to help us validate putative resistance loci. By integrating the malariagen_data API, AnoPrimer allows us to consider and avoid genetic variation in the Ag1000g resource during the design of our primers."
       ]
     },
     {
@@ -87,24 +87,24 @@
         "- **Buffer** to ensure the right conditions for the reaction\n",
         "- **Primers**, short stretches of DNA that initiate the PCR reaction, designed to bind to either side of the section of DNA you want to copy. **DNA polymerase** enzymes which perform DNA replication are only capable of adding nucleotides to the 3’-end of an existing nucleic acid, requiring a primer be bound to the template before DNA polymerase can begin a complementary strand.\n",
         "\n",
-        "<center><img src=\"https://github.com/sanjaynagi/AgamPrimer/blob/main/graphics/teaching/ing_pcr.png?raw=1\" alt=\"pcr\" width=\"700\" height=\"300\"/></center>\n",
+        "<center><img src=\"https://github.com/sanjaynagi/AnoPrimer/blob/main/graphics/teaching/ing_pcr.png?raw=1\" alt=\"pcr\" width=\"700\" height=\"300\"/></center>\n",
         "\n",
         "\n",
         "**The stages of PCR:**  \n",
         "\n",
-        "<center><img src=\"https://github.com/sanjaynagi/AgamPrimer/blob/main/graphics/teaching/pcr_cycles.png?raw=1\" alt=\"pcr\" width=\"600\" height=\"250\"/></center>\n",
+        "<center><img src=\"https://github.com/sanjaynagi/AnoPrimer/blob/main/graphics/teaching/pcr_cycles.png?raw=1\" alt=\"pcr\" width=\"600\" height=\"250\"/></center>\n",
         "\n",
         "**Denaturation** – Heat the reaction to ~95°C to break apart the double stranded DNA template into single strands.\n",
         "\n",
-        "<center><img src=\"https://github.com/sanjaynagi/AgamPrimer/blob/main/graphics/teaching/pcr-denaturing-animation.gif?raw=1\" alt=\"denaturing\" width=\"500\" height=\"150\" /></center>\n",
+        "<center><img src=\"https://github.com/sanjaynagi/AnoPrimer/blob/main/graphics/teaching/pcr-denaturing-animation.gif?raw=1\" alt=\"denaturing\" width=\"500\" height=\"150\" /></center>\n",
         "  \n",
         "**Annealing** – Lower the temperature to 50-56°C enable the DNA primers to attach to the single-stranded template DNA. \n",
         "\n",
-        "<center><img src=\"https://github.com/sanjaynagi/AgamPrimer/blob/main/graphics/teaching/pcr-annealing-animation.gif?raw=1\" alt=\"denaturing\" width=500, height=150/></center>\n",
+        "<center><img src=\"https://github.com/sanjaynagi/AnoPrimer/blob/main/graphics/teaching/pcr-annealing-animation.gif?raw=1\" alt=\"denaturing\" width=500, height=150/></center>\n",
         "\n",
         "**Extension** – Raise the temperature to 72°C and the new strand of DNA is synthesised by the Taq polymerase enzyme.\n",
         "\n",
-        "<center><img src=\"https://github.com/sanjaynagi/AgamPrimer/blob/main/graphics/teaching/extension.png?raw=1\" alt=\"denaturing\" width=500, height=175/></center>\n",
+        "<center><img src=\"https://github.com/sanjaynagi/AnoPrimer/blob/main/graphics/teaching/extension.png?raw=1\" alt=\"denaturing\" width=500, height=175/></center>\n",
         "\n",
         " **Repeat entire process for 25-40 cycles. After each cycle, the number of DNA molecules will approximately double**.\n",
         "\n"
@@ -122,7 +122,7 @@
         "\n",
         "In standard PCR, we amplify specific regions of the genome and utilise the PCR product at the end of the reaction. This could be an endpoint PCR, where we run the PCR product on an agarose gel to determine the size of the amplicon. Alternatively, standard PCR can be used to amplify specific regions of the genome prior to next-generation sequencing (amplicon sequencing).\n",
         "\n",
-        "<img src=\"https://github.com/sanjaynagi/AgamPrimer/blob/main/graphics/teaching/SINE.png?raw=1\" alt=\"denaturing\" width=300, height=300 align='right'/>\n",
+        "<img src=\"https://github.com/sanjaynagi/AnoPrimer/blob/main/graphics/teaching/SINE.png?raw=1\" alt=\"denaturing\" width=300, height=300 align='right'/>\n",
         "\n",
         "#### Example applications in *An. gambiae*\n",
         "\n",
@@ -144,7 +144,7 @@
         "\n",
         "In quantitative PCR, the concept is the same as standard PCR, but we measure the amount of DNA in the reaction at each cycle. To do this, we use either a fluorescent dye or fluorescent hybridisation probes, which emit light as the DNA concentration increases. The number of cycles at which each sample passes a given threshold, is called the **Cq or Ct value**. By measuring fluorescense and determining Cq values, we can determine the amount of DNA template that was in the original sample.\n",
         "\n",
-        "<center><img src=\"https://github.com/sanjaynagi/AgamPrimer/blob/main/graphics/teaching/realtimePCR.png?raw=1\" alt=\"pcr\" width=\"700\" height=\"300\"/></center>\n",
+        "<center><img src=\"https://github.com/sanjaynagi/AnoPrimer/blob/main/graphics/teaching/realtimePCR.png?raw=1\" alt=\"pcr\" width=\"700\" height=\"300\"/></center>\n",
         "\n",
         "\n",
         "\n",
@@ -152,7 +152,7 @@
         "\n",
         "SYBR green is a fluorescent dye, which emits a fluorescent signal when bound to double stranded DNA. \n",
         "\n",
-        "<center><img src=\"https://github.com/sanjaynagi/AgamPrimer/blob/main/graphics/teaching/SYBR2.png?raw=1\" alt=\"sybr\" width=\"700\" height=\"300\"/></center>\n",
+        "<center><img src=\"https://github.com/sanjaynagi/AnoPrimer/blob/main/graphics/teaching/SYBR2.png?raw=1\" alt=\"sybr\" width=\"700\" height=\"300\"/></center>\n",
         "\n",
         "#### Example applications in *An. gambiae*\n",
         "\n",
@@ -166,7 +166,7 @@
         "\n",
         "Hybridisation probes are short sequences, like primers, which bind to the DNA template. These can have flourophores attached, which emit fluorescence when the probe is displaced from the DNA template. By designing multiple probes (with different fluorophores) which are specific to either the wild-type or mutant allele, we can genotype SNPs. TaqMan and Locked nucleic acid probes have modifications which increase the stability of the probe-template duplex and help probes to discriminate between SNPs.\n",
         "\n",
-        "<center><img src=\"https://github.com/sanjaynagi/AgamPrimer/blob/main/graphics/teaching/TaqMan_lna.png?raw=1\" alt=\"pcr\" width=\"700\" height=\"300\"/></center>\n",
+        "<center><img src=\"https://github.com/sanjaynagi/AnoPrimer/blob/main/graphics/teaching/TaqMan_lna.png?raw=1\" alt=\"pcr\" width=\"700\" height=\"300\"/></center>\n",
         "\n",
         "\n",
         "#### Example applications in *An. gambiae*\n",
@@ -214,14 +214,14 @@
         "An equally problematic scenario may occur if primers bind but with unequal efficiency against different genetic variants. In this case, in any quantitative molecular assay such as qPCR for gene expression, SNPs could lead to biases in the estimation of gene expression between genetic variants or strains. Even single SNPs can introduce a variety of effects, ranging from minor to major impacts on Cq values <sup>[6]</sup>. The effect will depend on the type of SNP (which nucleotides are involved), and on the position of the SNP (3’ or 5’ end), as SNPs within the last 5 nucleotides at the 3’ end can disrupt the nearby polymerase active site, and so these tend to have a much greater impact <sup>[7]</sup>. SNPs at the terminal 3’ base had the strongest shift of Cq, altering Cq by as much as 5–7 cycles (Figure 2).\n",
         "\n",
         "<figure style=\"float: center; width: 500px;\">\n",
-        "    <img src=\"https://github.com/sanjaynagi/AgamPrimer/blob/main/graphics/teaching/snps_primer.jpg?raw=1\" alt=\"mismatches2\"/>\n",
+        "    <img src=\"https://github.com/sanjaynagi/AnoPrimer/blob/main/graphics/teaching/snps_primer.jpg?raw=1\" alt=\"mismatches2\"/>\n",
         "    <figcaption>Figure 2: Mismatches at the 3’ end of primers substantially reduce qPCR performance <sup>[6]</sup>.</figcaption>\n",
         "</figure>\n",
         "\n",
         "To maximise the accuracy of our data we should therefore aim to either design primers that avoid SNPs completely or that contain a mix of bases (degenerate) at the sites of SNPs. There is a useful article on this topic on the IDT website - [Consider SNPs when designing PCR and qPCR assays](https://eu.idtdna.com/pages/education/decoded/article/considering-snps-when-designing-pcr-and-qpcr-assays).\n",
         "\n",
         "\n",
-        "### AgamPrimer \n",
+        "### AnoPrimer \n",
         "\n",
         "As we have seen in earlier workshops, the Ag1000g resource <sup>[8]</sup> has revealed extreme amounts of [genetic variation in *Anopheles gambiae s.l*](https://genome.cshlp.org/content/30/10/1533.full). You can find a SNP in less than every 2 bases of the accessible genome - which makes considering SNPs even more important when designing molecular assays. However, it was not previously straightforward to consider genetic variation when designing primers, and so the vast majority of primers currently in use did not consider SNP variation during their design.\n",
         "\n",
@@ -289,7 +289,7 @@
       ],
       "source": [
         "# First, install some packages we require\n",
-        "!pip install AgamPrimer  -q "
+        "!pip install AnoPrimer  -q "
       ]
     },
     {
@@ -302,7 +302,7 @@
       "outputs": [],
       "source": [
         "# Import libraries \n",
-        "import AgamPrimer\n",
+        "import AnoPrimer\n",
         "import pandas as pd\n",
         "import malariagen_data\n",
         "import primer3\n",
@@ -509,7 +509,7 @@
         "id": "144a37ce"
       },
       "source": [
-        "Now we need to extract the bit of genome sequence we need. We will use functions in the [AgamPrimer](https://pypi.org/project/AgamPrimer/) package. For genomic DNA primers, this is quite simple and we can make direct use of the `ag3.genome_sequence()` function, but for cDNA cDNA primers, we must only include coding sequence, and so we must concatenate exons together.\n",
+        "Now we need to extract the bit of genome sequence we need. We will use functions in the [AnoPrimer](https://pypi.org/project/AnoPrimer/) package. For genomic DNA primers, this is quite simple and we can make direct use of the `ag3.genome_sequence()` function, but for cDNA cDNA primers, we must only include coding sequence, and so we must concatenate exons together.\n",
         "\n",
         "With cDNA primers for cDNA, we also must ensure that one primer spans an exon-exon junction, to ensure that any residual genomic DNA in our samples does not get amplified. We must therefore make a note of where the exon junctions are, and we store that as a list in the `exon_junctions` variable."
       ]
@@ -538,10 +538,10 @@
       "source": [
         "if any(item in assay_type for item in ['gDNA', 'probe']):\n",
         "  # genomic DNA\n",
-        "  target_sequence, gdna_pos, seq_parameters = AgamPrimer.prepare_gDNA_sequence(target_loc=target_loc, amplicon_size_range=amplicon_size_range, genome_seq=genome_seq, assay_name=assay_name, assay_type=assay_type)\n",
+        "  target_sequence, gdna_pos, seq_parameters = AnoPrimer.prepare_gDNA_sequence(target_loc=target_loc, amplicon_size_range=amplicon_size_range, genome_seq=genome_seq, assay_name=assay_name, assay_type=assay_type)\n",
         "elif assay_type == 'cDNA primers':\n",
         "  # RT-quantitative PCR, cDNA\n",
-        "  target_sequence, exon_junctions, gdna_pos, seq_parameters = AgamPrimer.prepare_cDNA_sequence(transcript=transcript, gff=ag3.geneset(), genome_seq=genome_seq, assay_name=assay_name)"
+        "  target_sequence, exon_junctions, gdna_pos, seq_parameters = AnoPrimer.prepare_cDNA_sequence(transcript=transcript, gff=ag3.geneset(), genome_seq=genome_seq, assay_name=assay_name)"
       ]
     },
     {
@@ -656,7 +656,7 @@
         "    }\n",
         "\n",
         "## adds some necessary parameters depending on assay type\n",
-        "primer_parameters = AgamPrimer.primer_params(\n",
+        "primer_parameters = AnoPrimer.primer_params(\n",
         "    primer_parameters=primer_parameters, \n",
         "    assay_type=assay_type,\n",
         "     n_primer_pairs=n_primer_pairs, \n",
@@ -733,7 +733,7 @@
         }
       ],
       "source": [
-        "AgamPrimer.primer3_run_statistics(primer_dict, assay_type)"
+        "AnoPrimer.primer3_run_statistics(primer_dict, assay_type)"
       ]
     },
     {
@@ -1054,7 +1054,7 @@
         }
       ],
       "source": [
-        "primer_df = AgamPrimer.primer3_to_pandas(primer_dict, assay_type)\n",
+        "primer_df = AnoPrimer.primer3_to_pandas(primer_dict, assay_type)\n",
         "primer_df"
       ]
     },
@@ -2052,7 +2052,7 @@
         }
       ],
       "source": [
-        "results_dict = AgamPrimer.plot_primer_ag3_frequencies(\n",
+        "results_dict = AnoPrimer.plot_primer_ag3_frequencies(\n",
         "    primer_df=primer_df,\n",
         "    gdna_pos=gdna_pos,\n",
         "    contig=contig,\n",
@@ -2105,7 +2105,7 @@
         }
       ],
       "source": [
-        "AgamPrimer.plot_primer_locs(\n",
+        "AnoPrimer.plot_primer_locs(\n",
         "    primer_res_dict=results_dict,\n",
         "    primer_df=primer_df, \n",
         "    assay_type=assay_type,\n",
@@ -2613,7 +2613,7 @@
         }
       ],
       "source": [
-        "blat_result_df = AgamPrimer.gget_blat_genome(primer_df, assay_type, assembly='anoGam3')\n",
+        "blat_result_df = AnoPrimer.gget_blat_genome(primer_df, assay_type, assembly='anoGam3')\n",
         "blat_result_df"
       ]
     },
@@ -2647,7 +2647,7 @@
       "source": [
         "### An example of primers to avoid\n",
         "\n",
-        "In the above *ace1* example, all of the primer pairs look reasonable. Lets have a look at an example where some of the primers do not look so good. A UGT detoxification gene, AGAP006222, is overexpressed very highly in populations of *An. coluzzii* - lets try and design some cDNA primers to measure its expression. The below `AgamPrimer.designPrimers()` function integrates the entire notebook into one function, for convenience."
+        "In the above *ace1* example, all of the primer pairs look reasonable. Lets have a look at an example where some of the primers do not look so good. A UGT detoxification gene, AGAP006222, is overexpressed very highly in populations of *An. coluzzii* - lets try and design some cDNA primers to measure its expression. The below `AnoPrimer.designPrimers()` function integrates the entire notebook into one function, for convenience."
       ]
     },
     {
@@ -2759,7 +2759,7 @@
         "    }\n",
         "\n",
         "\n",
-        "primer_df, blat_df = AgamPrimer.designPrimers(assay_type='cDNA primers',              # assay_type options are: 'cDNA primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
+        "primer_df, blat_df = AnoPrimer.designPrimers(assay_type='cDNA primers',              # assay_type options are: 'cDNA primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
         "                                   target='AGAP006222-RA',                            # target should be an AGAP transcript identifier in for qPCR, otherwise should be an integer in genome\n",
         "                                   assay_name='UGT_222',\n",
         "                                   contig='2L',\n",
@@ -2836,7 +2836,7 @@
         "    }\n",
         "\n",
         "\n",
-        "# primer_df, blat_df = AgamPrimer.designPrimers(assay_type='gDNA primers + probe',  # assay_type options are: 'cDNA primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
+        "# primer_df, blat_df = AnoPrimer.designPrimers(assay_type='gDNA primers + probe',  # assay_type options are: 'cDNA primers', 'gDNA primers', 'gDNA primers + probe', 'probe'\n",
         "#                                    target=9_500_000 ,#'AGAP000818-RA',            # target should be an AGAP transcript identifier in for qPCR, otherwise should be an integer in genome\n",
         "#                                    assay_name='chromx',\n",
         "#                                    contig='X',\n",
@@ -2859,7 +2859,7 @@
         "---\n",
         "### **Future development**\n",
         "\n",
-        "Any contributions or suggestions on how we can improve this notebook are more than welcome. Please [email](mailto:sanjay.nagi@lstmed.ac.uk) or log an [issue on github](https://github.com/sanjaynagi/primerDesignAg/issues). This notebook and source code for AgamPrimer are located here - https://github.com/sanjaynagi/AgamPrimer/    \n",
+        "Any contributions or suggestions on how we can improve this notebook are more than welcome. Please [email](mailto:sanjay.nagi@lstmed.ac.uk) or log an [issue on github](https://github.com/sanjaynagi/primerDesignAg/issues). This notebook and source code for AnoPrimer are located here - https://github.com/sanjaynagi/AnoPrimer/    \n",
         "\n",
         "---\n",
         "\n",
@@ -2895,7 +2895,7 @@
   ],
   "metadata": {
     "colab": {
-      "name": "Workshop 6 - Module 4 - AgamPrimer.ipynb",
+      "name": "Workshop 6 - Module 4 - AnoPrimer.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
