--- a/docs/AnoPrimer-docs/notebooks/troubleshooting_contributing.ipynb
+++ b/docs/AnoPrimer-docs/notebooks/troubleshooting_contributing.ipynb
@@ -8,16 +8,16 @@
    "source": [
     "# Troubleshooting\n",
     "\n",
-    "If you run into a problem or find a bug in the notebooks, please raise an issue to the [issue tracker](https://github.com/sanjaynagi/AgamPrimer/issues). \n",
+    "If you run into a problem or find a bug in the notebooks, please raise an issue to the [issue tracker](https://github.com/sanjaynagi/AnoPrimer/issues). \n",
     "\n",
     "If its not for a bug, but for general help and guidance, you may also [email](mailto:sanjay.c.nagi@gmail.com) me directly.\n",
     "\n",
     "\n",
     "# Contributing\n",
     "\n",
-    "We encourage contributions to AgamPrimer.\n",
+    "We encourage contributions to AnoPrimer.\n",
     "\n",
-    "If you have any feedback on how the repo may be improved, please do get in touch by emailing or raising an [issue on github](https://github.com/sanjaynagi/AgamPrimer/issues), or fork the github repository and create a pull request for any additional features you would like to implement."
+    "If you have any feedback on how the repo may be improved, please do get in touch by emailing or raising an [issue on github](https://github.com/sanjaynagi/AnoPrimer/issues), or fork the github repository and create a pull request for any additional features you would like to implement."
    ]
   }
  ],
