add google auth to CI, fix np array in primer3 input

--- a/notebooks/AnoPrimer-long.ipynb
+++ b/notebooks/AnoPrimer-long.ipynb
@@ -43,11 +43,7 @@
     "import malariagen_data\n",
     "import primer3\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "import google.auth\n",
-    "\n",
-    "credentials, project = google.auth.default()"
+    "import numpy as np"
    ]
   },
   {
